# host-relay

./: Makefile  README.md  hr-host  install.sh  pyproject.toml
hr/: __init__.py  config.py  env_resolver.py  main.py  mcp_server.py  policy.py  spool.py  watcher.py  worker.py
specs/: design.md  requirements.md  tasks.md
tests/: test_env_resolver.py  test_main.py  test_mcp.py  test_policy.py  test_spool.py  test_watcher.py  test_worker.py
