[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "host-relay"
version = "0.1.0"
description = "Let AI agents in sandboxed environments run simple commands on the host machine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
hr = "hr.main:main"

[tool.hatch.build.targets.wheel]
packages = ["hr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30

[project.optional-dependencies]
dev = ["pytest", "pytest-timeout", "ruff"]
